.print-visible .inner-page video bugs Layout stuff

--- a/css/main.css
+++ b/css/main.css
@@ -148,10 +148,6 @@ nav a:hover {
     MOBILE: Main
    ============== */
 
-.main {
-    padding: 30px 0;
-}
-
 .main article h1 {
     font-size: 2em;
 }
@@ -180,6 +176,10 @@ nav a:hover {
 
 h1, h2, h3, h4, h5, h6, p {
 	margin: 0 0 .5em 0;
+}
+
+.print-visible {
+	display: none;
 }
 
 body {
@@ -315,7 +315,9 @@ footer a:hover {
 	color: #0032BA;
 }
 
-
+.inner-page 	{
+	margin: 0 1em 1em 1em;
+}
 
 .main {
 	margin: 0 auto;
@@ -326,6 +328,11 @@ footer a:hover {
 	overflow: hidden;
 	position: relative;
 	z-index: 2;
+}
+
+.main .sidebar,
+.main .main-content {
+	margin-top: 1.5em;
 }
 
 .main a {
@@ -503,11 +510,22 @@ footer .s5of5 {
 	height: 16em;
 	float: left;
 	margin: 0 1.5em 1em 0;
+	position: relative;
 }
-.video-wrapper iframe {
-	width: 100%;
-	height: 100%;
-}
+	.video-wrapper > .aspect4-3 { 
+		margin-top: 63%;
+	}
+	.video-wrapper .stretch {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+	.video-wrapper iframe {
+		width: 100%;
+		height: 100%;
+	}
 .video-description {
 	font-size: 0.9em;
 	line-height: 1.3;
@@ -603,23 +621,8 @@ footer .s5of5 {
 		display: block;
 		width: auto;
 		height: auto;
-		position: relative;
 		overflow: hidden;
 		margin: 0 0 0.5em 0;
-	}
-	.video-wrapper > .aspect4-3 { 
-		margin-top: 63%;
-	}
-	.video-wrapper .stretch {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-	}
-	.video-wrapper iframe {
-		width: 100%;
-		height: 100%;
 	}
 	.video-description {
 		font-size: 0.9em;
@@ -691,6 +694,10 @@ footer .s5of5 {
 	.main > .main-content {
 		width: 40.25em;
 		margin-left: 4em;
+	}
+	.main > .inner-page {
+		width: 41.75em;
+		margin-left: 2.5em;
 	}
 	.sidebar > div {
 		float: none;
@@ -781,7 +788,31 @@ footer .s5of5 {
     a[href]:after {
         content: " (" attr(href) ")";
     }
-
+	
+	header > div > a[href]:after {
+		content: '';
+	}
+	
+	header .search,
+	header nav,
+	footer,
+	.main .sidebar
+	{
+		display: none;
+	}
+	
+	a[href="#top"] {
+		display: none;
+	}
+	
+	.main {
+		border-bottom: none;
+	}
+	
+	.print-visible {
+		display: initial;
+	}
+	
     abbr[title]:after {
         content: " (" attr(title) ")";
     }
